notebooks, many small changes

--- a/Anhang_A.tex
+++ b/Anhang_A.tex
@@ -25,7 +25,7 @@
         \hline
         Eta     & $\eta$   & $H$ & Wirkungsgrad, Viskositätseffekte in der Fluidakustik \\
         \hline
-        Theta   & $\theta$ , $\vartheta$ & $\Theta$ & manchmal Phasenwinkel, Winkelposition, Temperatur (Akustik) \\
+        Theta   & $\theta$ , $\vartheta$ & $\Theta$ & manchmal Phasenwinkel, Winkelposition, Temperatur (Akustik). $\Theta$ z.T. Heaviside funktion. \\
         \hline
         Iota    & $\iota$  & $I$ & Selten im Audio-Bereich verwendet \\
         \hline
