--- a/lesson2.tex
+++ b/lesson2.tex
@@ -81,7 +81,7 @@ Im digitalen ist die Idee recht simpel, ein Signal dass an der stelle $n=0$ den 
 
 \section{Heaviside-Funktion, $u(t)$}
 
-Engl. 'unit step' auch oft Heaviside-Funktion genannt. Typischerweise $u(t)$ aber in manchen Kontexten (vor allem Elektrotechnik, Steuerungstechnik) wird $u(t)$ oft schon benutzt um den Input in ein System zu benennen (statt $x(t)$). $u(t)$ ist das Integral des Impulses und damit eine Funktion die $0$ ist, bei $t=0$ bzw. $n=0$ auf $1$ springt und auf diesem Wert verweilt. Siehe Abb \ref{fig:heavyside}. Wird oft Verwendet um Kausale Abläufe zu beschreiben bzw. schlicht eine gegebene Funktion erst bei 0 starten zu lassen, zb eine Exponentialfunktion, siehe Abb \ref{fig:unitstepUsed} .
+Engl. 'unit step' auch oft Heaviside\footnote{Britischer Mathematiker und Physiker Oliver Heaviside (1850–1925)}-Funktion genannt\footnote{Weitere Synonyme: Theta-, Treppen-, Schwellenwert-, Stufen-, Sprung- oder Einheitssprungfunktion}. Manchmal notiert als $\Theta(t)$, oft aber $u(t)$. In manchen Kontexten (vor allem Elektrotechnik, Steuerungstechnik) wird $u(t)$ oft schon benutzt um den Input in ein System zu benennen (statt $x(t)$). $u(t)$ ist das Integral des Impulses und damit eine Funktion die $0$ ist, bei $t=0$ bzw. $n=0$ auf $1$ springt und auf diesem Wert verweilt. Siehe Abb \ref{fig:heavyside}. Wird oft Verwendet um Kausale Abläufe zu beschreiben bzw. schlicht eine gegebene Funktion erst bei 0 starten zu lassen, zB. eine Exponentialfunktion, siehe Abb. \ref{fig:unitstepUsed} .
 % \todo{plot}
 
 
