--- a/lesson6.tex
+++ b/lesson6.tex
@@ -2,7 +2,7 @@
 \chapter{Diskrete Mathematik \& Reihen}
 
 Taylor Reihe, Fourier Reihe, z transform, faltung, newton-raphson
-
+Kreutzkorrelation, autokorellation
 % %!TEX root = main.tex
 % \chapter{Lineare Algebra, Vektoren und Matrizen}
 % \todo{Probabilistische system entwicklung, https://www.youtube.com/watch?v=K-8F\_zDMDUI\&list=PLMrJAkhIeNNTYaOnVI3QpH7jgULnAmvPA\&index=3}
