--- a/python/notebooks/dotProduct.ipynb
+++ b/python/notebooks/dotProduct.ipynb
@@ -78,7 +78,7 @@
     "axhline(lw=0.5)\n",
     "xlabel('$t$')\n",
     "legend(loc=3)\n",
-    "plt.savefig('../plots/dotProd.pgf', bbox_inches='tight', transparent=True);"
+    "# plt.savefig('../plots/dotProd.pgf', bbox_inches='tight', transparent=True);"
    ]
   },
   {
