--- a/references.bib
+++ b/references.bib
@@ -147,3 +147,10 @@
   year={2020},
   publisher={SIAM}
 }
+
+@book{christensen2019introduction,
+  title={Introduction to audio processing},
+  author={Christensen, Mads G},
+  year={2019},
+  publisher={Springer}
+}
