george hinweis bzgl. pylab import

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -55,6 +55,7 @@ Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Ver
 	\item Alexander Simeonov \& Valentin De Ridder, Fehlerkorrektur in Aufgabe 1.6.
 	\item Alexander Simeonov, Fehlerkorrektur in Polynom p. 34.
 	\item Adrian Fritsche, Fehlerkorrektur in Umformung von $e^{i\pi}=-1$ in Lösung, Kapitel 3, Aufgabe 3, b).
+	\item George Sioros, Hinweis, dass es wichtig wäre die Nachteile von \texttt{\%pylab} zu besprechen. Kapitel \ref{cha:funktionen_polynome_python}.
 \end{itemize}
 
 % \section*{General TODOs}
