--- a/lesson1.tex
+++ b/lesson1.tex
@@ -711,7 +711,7 @@ $$L = 20 \cdot log_{10}(x)$$
 
     \item Beweisen Sie mittels Gleichungen \ref{eq:linearity1}, \ref{eq:linearity2} oder \ref{eq:linearity3} dass $f(x)=|x|$ nicht linear ist.
 
-
+    % \item Achtung, historisch, schwierig. Reflektiere über den Ausdruck: $R:=\{\,x\mid x\notin x\,\}$. Existiert $x$?
 
 \end{enumerate}
 
