2 col vorb, some matrix stuff

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -1,4 +1,6 @@
 %!TEX root = main.tex
+\begin{multicols}{2}
+
 \chapter*{Vorbemerkungen}
 
 \section*{Quellen}
@@ -37,12 +39,19 @@ Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch cli
 
 \emph{Zum Teil scheint es notwendig zu sein noch auf der großen 'RUN' Button links oben zu clicken.}
 
-\begin{figure}[h!]
-	\centering
-	\includegraphics[width=0.8 \textwidth]{img/faust_diag.png}
-	\caption{Block Diagramm in \texttt{FAUST}}
-	\label{fig:faustBlock}
-\end{figure}
+% \begin{figure}[h!]
+% 	\centering
+% 	\includegraphics[width=0.4 \textwidth]{img/faust_diag.png}
+% 	\caption{Block Diagramm in \texttt{FAUST}}
+% 	\label{fig:faustBlock}
+% \end{figure}
+
+\begin{center}
+    \includegraphics[width=0.5\textwidth]{img/faust_diag.png}
+    \captionof{figure}{Block Diagramm in \texttt{FAUST}}
+    \label{fig:faustBlock}
+\end{center}
+
 
 Geneigten LeserInnen sei besonders empfohlen auch auf den 'Diagramm' button zu clicken um ein Blockdiagramm zu sehen dass dem Code/dem jeweiligen Konzept Entspricht.
 
@@ -65,3 +74,5 @@ Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Ver
 % 	% \item Page numbers
 % 	% \item scheinbar wird derzeit teilweise Text 'verschluckt'. zb linearfaktorzerlegung.
 % \end{itemize}
+
+\end{multicols}
