--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 %Dokumentklasse
 \documentclass[a4paper,11pt]{scrreprt}
+% \documentclass[twocolumn]{article}
+
 % scrbook
 % \documentclass[a4paper,11pt]{scrbook}
 
@@ -14,6 +16,10 @@
 % \WarningFilter[pdftoc]{hyperref}{Token not allowed in a PDF string}
 
 % Standard Packages
+% for 2 column layout:
+\usepackage{multicol}
+\usepackage{caption}
+% -------------------
 \usepackage[utf8]{inputenc}
 \usepackage{svg}
 \usepackage[ngerman]{babel} % deutsch.
