--- a/lesson5.tex
+++ b/lesson5.tex
@@ -5,6 +5,8 @@
 
 \citep{strang2020linear}
 
+% \begin{multicols}{2}
+
 \section{Motivation}
 Vektoren und Matrizen findet man sehr häufig in der Audiotechnischen Literatur. Wie bereits in Kapitel \ref{chap:complex} beschrieben, sind komplexe Zahlen allgegenwärtig und deren Interpretation als Vektor bedeutsam und praktisch. Andererseits kann zB. ein Stereosignal als Vektor aufgefasst werden: Zu jedem Zeitpunkt hat es 2 Zahlen, diese können als Vektor im 2-dimensionalen Raum aufgefasst werden, was wiederum diverse Operationen nahelegt. Ebenso scheint es spätestens an diesem Punkt naheliegend ein $n$-Kanal Signal als Vektor mit $n$ Einträgen zu verstehen und womöglich hieraus Schlüsse ziehen zu dürfen. Wenn es um verräumlichung von Signalen (zB. Ambisonics) geht und daher Positionen im Dreidimensionalen Raum ($\mathbb{R}^3$) benötigt werden ist klar, dass wir diese mittels Vektoren beschreiben können. Aber auch wenn es um Direktionalität von Lautsprechern oder Mikrophonen geht werden letztlich 2 bis 3 Dimensionale Felder beschrieben und auch hier kommen Vektoren zum Einsatz. Es sei aber an dieser Stelle betont dass Vektoren und Matrizen nicht ausschließlich für Audioanwendungen im Dreidimensionalen Raum zum Einsatz kommen. Rotations- Hadamard- und Householdermatrizen \citep{PASPWEB2010}\footnote{https://ccrma.stanford.edu/~jos/pasp/Hadamard\_Matrix.html} werden für Hall-Algorithmen und Resonatoren verwendet , Filtersysteme können über Zustandsraumdarstellungen via Vektoren und Matrizen beschrieben werden \citep{bilbao2009numerical} und vieles mehr.       
 
@@ -127,6 +129,8 @@ In [5]: dot(a,b)
 Out[5]: 56
 \end{python}
 
+% \end{multicols}
+
 \praxis{
     Hat all dies irgendeine Relevanz in der Audio-Verarbeitung?
     Eine einfache Bezugnahme kann hergestellt werden indem wir uns verdeutlichen dass die Energie eines zeitdiskreten Signals \citep{christensen2019introduction} folgendermaßen berechnet werden kann:
@@ -160,6 +164,21 @@ Nur in $\mathbb{R}^3$ definiert!
 Python: \pythoninline{cross(a,b)}
 
 \section{Matrizen}
+
+
+
+Eine Matrix ist eine rechteckige Struktur von Zahlen:
+
+
+\begin{equation}
+\mathbf{A} = \begin{bmatrix} a_{11} & a_{12} & \dots & a_{1m} \\
+                    a_{21} & a_{22} &       &  \vdots   \\
+                    \vdots &        &\ddots &  \vdots \\
+                    a_{n 1} & \dots & \dots & a_{n m}
+ \end{bmatrix}
+\end{equation}
+
+
 
 \praxis{
 Angenommen wir wollen $4$ Audio Signale, zum Beispiel 4 verschiedene Instrumente auf 6 verschiedene Lautsprecher schicken, unterschiedlicher Lautstärke. Wie könnte man dies Mathematisch formulieren? Man könnte zum Beispiel sagen die 4 Audio Signale seien ein Vektor $\vec{x(t)}$, der die jeweiligen Signale enthält: $\vec{x}(t) = \begin{bmatrix} x_1(t) & x_2(t) & x_3(t) & x_4(t)\end{bmatrix}$. Unsere Output Signale die wir an die 6 Lautsprecher schicken nennen wir vielleicht $y_1(t), \dots, y_6(t)$. Auch diese machen wir zu einem Vektor $\vec{y}(t) = \begin{bmatrix} y_1(t) & y_2(t) & y_3(t) & y_4(t) & y_5(t) & y_6(t)\end{bmatrix}$. Nun können wir unsere Verräumlichung über eine Matrix definieren:
@@ -265,13 +284,6 @@ Out[5]: array([1., 2.])
 
 
 
-\begin{equation}
-\mathbf{A} = \begin{bmatrix} a_{11} & a_{12} & \dots & a_{1m} \\
-                    a_{21} & a_{22} &       &  \vdots   \\
-                    \vdots &        &\ddots &  \vdots \\
-                    a_{n 1} & \dots & \dots & a_{n m}
- \end{bmatrix}
-\end{equation}
 
 
 
