--- a/main.tex
+++ b/main.tex
@@ -415,6 +415,8 @@ frame=tb,                         % Any extra options here
 showstringspaces=false,
 inputencoding=utf8,
 literate={ϵ}{$\epsilon$}1
+        {θ}{$\theta$}1
+        {π}{$\pi$}1
          {In}{{{\color{codeGreen}In}\textnormal}}1
          {Out}{{{\hspace{1.5em}\color{codeRed}{Out}\hspace{1.9em}}}}1
 }}
