--- a/main.tex
+++ b/main.tex
@@ -417,6 +417,13 @@ inputencoding=utf8,
 literate={ϵ}{$\epsilon$}1
         {θ}{$\theta$}1
         {π}{$\pi$}1
+        {⋅}{$\cdot$}1
+        {⎡}{$\lceil$}1
+        {⎤}{$\rceil$}1
+        {⎦}{$\rfloor$}1
+        {⎣}{$\lfloor$}1
+        {⎢}{$\vert$}1 %these 2 are different!
+        {⎥}{$\vert$}1 %these 2 are different!
          {In}{{{\color{codeGreen}In}\textnormal}}1
          {Out}{{{\hspace{1.5em}\color{codeRed}{Out}\hspace{1.9em}}}}1
 }}
